--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test-dev": "node ./node_modules/jest/bin/jest.js --watchAll",
     "test": "jest -u",
     "lint": "eslint .",
-    "format": "prettier --write src",
+    "format": "prettier --write",
     "prepare": "husky install",
     "pre-commit": "lint-staged"
   },
